# Teechain-KeyStone

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.deprecated  README.md  Teechain.md  channel.cpp  channel.h  edge_wrapper.cpp  edge_wrapper.h  encl_message.h  enclave-host.cpp  primary.md  quick-start.sh  run.sh  source.sh
docs/: Building-and-Running.rst
include/: command.h  edge_defines.h  enclave_expected_hash.h  hacks.h  message.h  sm_expected_hash.h  syscall_wrapper.h
patches/: 0001-add-syscall-interface.patch
scripts/: get_attestation.sh  get_attestation_teechain.sh
server_eapp/: channel.c  edge_wrapper.c  server_eapp.c
trusted/: CMakeLists.txt  app.lds  channel.c  channel.h  cmd.cpp  cmd.h  cmd_parser.c  cmd_parser.cpp  debug.c  edge_wrapper.c  edge_wrapper.h  map.c  map.h  server_eapp.c  state.c  state.h  teechain.c  teechain.h  utils.c  utils.h
untrusted/: cmd.cpp  cmd.h  network.cpp  network.h  teechain.cpp  teechain.h  trusted_client.cpp  utils.h
